// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscountInput matches snapshot with error 1`] = `
<div
  className="form-group"
>
  <label
    className="form-label"
  >
    Discount
  </label>
  <input
    className="form-control form-control is-invalid"
    name="discount"
    onChange={[Function]}
    type="number"
    value={10}
  />
  <div
    className="invalid-feedback"
  >
    Some error
  </div>
  <div
    className="valid-feedback"
  >
    Look's good
  </div>
</div>
`;

exports[`DiscountInput matches snapshot without error 1`] = `
<div
  className="form-group"
>
  <label
    className="form-label"
  >
    Discount
  </label>
  <input
    className="form-control form-control is-valid"
    name="discount"
    onChange={[Function]}
    type="number"
    value={10}
  />
  <div
    className="invalid-feedback"
  />
  <div
    className="valid-feedback"
  >
    Look's good
  </div>
</div>
`;
